Add dependency on eg25-manager and temp disable gpsd initscript.

--- a/debian/control
+++ b/debian/control
@@ -7,5 +7,5 @@ Build-Depends: debhelper (>= 10)
 
 Package: pinephone-modem-config
 Architecture: all
-Depends: ${misc:Depends}, gpsd, ofono, atinout
+Depends: ${misc:Depends}, gpsd, ofono, atinout, eg25-manager
 Description: Pinephone modem configuration files and initscripts
